fix: Fix background image on mobile browsers by setting the background size to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 body {
     background-image: url(/assets/images/heartleaves.jpg);
-    background-size: cover;
+    background-size: 100%;
     background-position: center;
 }
 
@@ -61,7 +61,7 @@ button > a {
 img {
     width: 100%;
     height: 100%;
-    margin-bottom: 40px;
+    margin: 10px 0 40px 0;
   }
 
 .option-btn {
@@ -73,3 +73,13 @@ img {
     font-size: 30px;
     background-color: #ffffa1;
 }
+
+@media screen and (min-width: 1024px) {
+    img {
+        margin-top: 40px;
+    }
+
+    .option-btn {
+        font-size: 40px;
+    }
+  }
